--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,6 @@
 services:
   - type: web
-    name: your-bot-name
+    name: fumi
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python bot.py"  # เริ่มต้นการรันบอท
-    port: 10000
+    startCommand: "python bot.py"
